exports[`test should render a default component 1`] = `null`;

exports[`test should render with a given breakpoint 1`] = `
<ResponsiveElement
  defaultElement={
    <div
      data-terra-clinical-item-collection-list-view={true}>
      <SingleSelectList
        hasChevrons={false}
        isDivided={false}
        onChange={[Function]}>
        <ListItem
          content={
            <ItemView
              accessoryAlignment="alignCenter"
              comment={
                <ItemComment
                  isTruncated={false}
                  text="test comment" />
              }
              displays={
                Array [
                  <ItemDisplay
                    isTruncated={false}
                    text="Display 1" />,
                  <ItemDisplay
                    isTruncated={false}
                    text="Display 2" />,
                ]
              }
              endAccessory={
                <p>
                  End Accessory
                </p>
              }
              isTruncated={false}
              layout="oneColumn"
              startAccessory={
                <p>
                  Start Accessory
                </p>
              }
              textEmphasis="default" />
          }
          isSelected={false} />
        <ListItem
          content={
            <ItemView
              accessoryAlignment="alignCenter"
              comment={
                <ItemComment
                  isTruncated={false}
                  text="test comment" />
              }
              displays={
                Array [
                  <ItemDisplay
                    isTruncated={false}
                    text="Display 1" />,
                  <ItemDisplay
                    isTruncated={false}
                    text="Display 2" />,
                ]
              }
              endAccessory={
                <p>
                  End Accessory
                </p>
              }
              isTruncated={false}
              layout="oneColumn"
              startAccessory={
                <p>
                  Start Accessory
                </p>
              }
              textEmphasis="default" />
          }
          isSelected={false} />
        <ListItem
          content={
            <ItemView
              accessoryAlignment="alignCenter"
              comment={
                <ItemComment
                  isTruncated={false}
                  text="test comment" />
              }
              displays={
                Array [
                  <ItemDisplay
                    isTruncated={false}
                    text="Display 1" />,
                  <ItemDisplay
                    isTruncated={false}
                    text="Display 2" />,
                ]
              }
              endAccessory={
                <p>
                  End Accessory
                </p>
              }
              isTruncated={false}
              layout="oneColumn"
              startAccessory={
                <p>
                  Start Accessory
                </p>
              }
              textEmphasis="default" />
          }
          isSelected={false} />
      </SingleSelectList>
    </div>
  }
  medium={
    <div
      data-terra-clinical-item-collection-table-view={true}>
      <Table
        isPadded={true}
        isStriped={true}
        style={
          Object {
            "tableLayout": "fixed",
          }
        }>
        <TableHeader
          style={
            Object {
              "visibility": "hidden",
            }
          }>
          <TableHeaderCell
            columnType="accessory" />
          <TableHeaderCell
            columnType="display" />
          <TableHeaderCell
            columnType="display" />
          <TableHeaderCell
            columnType="comment" />
          <TableHeaderCell
            columnType="accessory" />
        </TableHeader>
        <SingleSelectableRows
          onChange={[Function]}>
          <TableRow
            isSelectable={true}
            isSelected={false}>
            <TableCell
              className="content-accessory"
              content={
                <p>
                  Start Accessory
                </p>
              } />
            <TableCell
              content={
                <ItemDisplay
                  isTruncated={false}
                  text="Display 1" />
              }
              data-terra-clinical-item-collection-content="display" />
            <TableCell
              content={
                <ItemDisplay
                  isTruncated={false}
                  text="Display 2" />
              }
              data-terra-clinical-item-collection-content="display" />
            <TableCell
              content={
                <ItemComment
                  isTruncated={false}
                  text="test comment" />
              }
              data-terra-clinical-item-collection-content="comment" />
            <TableCell
              className="content-accessory"
              content={
                <p>
                  End Accessory
                </p>
              } />
          </TableRow>
          <TableRow
            isSelectable={true}
            isSelected={false}>
            <TableCell
              className="content-accessory"
              content={
                <p>
                  Start Accessory
                </p>
              } />
            <TableCell
              content={
                <ItemDisplay
                  isTruncated={false}
                  text="Display 1" />
              }
              data-terra-clinical-item-collection-content="display" />
            <TableCell
              content={
                <ItemDisplay
                  isTruncated={false}
                  text="Display 2" />
              }
              data-terra-clinical-item-collection-content="display" />
            <TableCell
              content={
                <ItemComment
                  isTruncated={false}
                  text="test comment" />
              }
              data-terra-clinical-item-collection-content="comment" />
            <TableCell
              className="content-accessory"
              content={
                <p>
                  End Accessory
                </p>
              } />
          </TableRow>
          <TableRow
            isSelectable={true}
            isSelected={false}>
            <TableCell
              className="content-accessory"
              content={
                <p>
                  Start Accessory
                </p>
              } />
            <TableCell
              content={
                <ItemDisplay
                  isTruncated={false}
                  text="Display 1" />
              }
              data-terra-clinical-item-collection-content="display" />
            <TableCell
              content={
                <ItemDisplay
                  isTruncated={false}
                  text="Display 2" />
              }
              data-terra-clinical-item-collection-content="display" />
            <TableCell
              content={
                <ItemComment
                  isTruncated={false}
                  text="test comment" />
              }
              data-terra-clinical-item-collection-content="comment" />
            <TableCell
              className="content-accessory"
              content={
                <p>
                  End Accessory
                </p>
              } />
          </TableRow>
        </SingleSelectableRows>
      </Table>
    </div>
  }
  responsiveTo="parent" />
`;

exports[`test should render with multiple rows 1`] = `
<ResponsiveElement
  defaultElement={
    <div
      data-terra-clinical-item-collection-list-view={true}>
      <SingleSelectList
        hasChevrons={false}
        isDivided={false}
        onChange={[Function]}>
        <ListItem
          content={
            <ItemView
              accessoryAlignment="alignCenter"
              comment={
                <ItemComment
                  isTruncated={false}
                  text="test comment" />
              }
              displays={
                Array [
                  <ItemDisplay
                    isTruncated={false}
                    text="Display 1" />,
                  <ItemDisplay
                    isTruncated={false}
                    text="Display 2" />,
                ]
              }
              endAccessory={
                <p>
                  End Accessory
                </p>
              }
              isTruncated={false}
              layout="oneColumn"
              startAccessory={
                <p>
                  Start Accessory
                </p>
              }
              textEmphasis="default" />
          }
          isSelected={false} />
        <ListItem
          content={
            <ItemView
              accessoryAlignment="alignCenter"
              comment={
                <ItemComment
                  isTruncated={false}
                  text="test comment" />
              }
              displays={
                Array [
                  <ItemDisplay
                    isTruncated={false}
                    text="Display 1" />,
                  <ItemDisplay
                    isTruncated={false}
                    text="Display 2" />,
                ]
              }
              endAccessory={
                <p>
                  End Accessory
                </p>
              }
              isTruncated={false}
              layout="oneColumn"
              startAccessory={
                <p>
                  Start Accessory
                </p>
              }
              textEmphasis="default" />
          }
          isSelected={false} />
        <ListItem
          content={
            <ItemView
              accessoryAlignment="alignCenter"
              comment={
                <ItemComment
                  isTruncated={false}
                  text="test comment" />
              }
              displays={
                Array [
                  <ItemDisplay
                    isTruncated={false}
                    text="Display 1" />,
                  <ItemDisplay
                    isTruncated={false}
                    text="Display 2" />,
                ]
              }
              endAccessory={
                <p>
                  End Accessory
                </p>
              }
              isTruncated={false}
              layout="oneColumn"
              startAccessory={
                <p>
                  Start Accessory
                </p>
              }
              textEmphasis="default" />
          }
          isSelected={false} />
      </SingleSelectList>
    </div>
  }
  responsiveTo="parent"
  small={
    <div
      data-terra-clinical-item-collection-table-view={true}>
      <Table
        isPadded={true}
        isStriped={true}
        style={
          Object {
            "tableLayout": "fixed",
          }
        }>
        <TableHeader
          style={
            Object {
              "visibility": "hidden",
            }
          }>
          <TableHeaderCell
            columnType="accessory" />
          <TableHeaderCell
            columnType="display" />
          <TableHeaderCell
            columnType="display" />
          <TableHeaderCell
            columnType="comment" />
          <TableHeaderCell
            columnType="accessory" />
        </TableHeader>
        <SingleSelectableRows
          onChange={[Function]}>
          <TableRow
            isSelectable={true}
            isSelected={false}>
            <TableCell
              className="content-accessory"
              content={
                <p>
                  Start Accessory
                </p>
              } />
            <TableCell
              content={
                <ItemDisplay
                  isTruncated={false}
                  text="Display 1" />
              }
              data-terra-clinical-item-collection-content="display" />
            <TableCell
              content={
                <ItemDisplay
                  isTruncated={false}
                  text="Display 2" />
              }
              data-terra-clinical-item-collection-content="display" />
            <TableCell
              content={
                <ItemComment
                  isTruncated={false}
                  text="test comment" />
              }
              data-terra-clinical-item-collection-content="comment" />
            <TableCell
              className="content-accessory"
              content={
                <p>
                  End Accessory
                </p>
              } />
          </TableRow>
          <TableRow
            isSelectable={true}
            isSelected={false}>
            <TableCell
              className="content-accessory"
              content={
                <p>
                  Start Accessory
                </p>
              } />
            <TableCell
              content={
                <ItemDisplay
                  isTruncated={false}
                  text="Display 1" />
              }
              data-terra-clinical-item-collection-content="display" />
            <TableCell
              content={
                <ItemDisplay
                  isTruncated={false}
                  text="Display 2" />
              }
              data-terra-clinical-item-collection-content="display" />
            <TableCell
              content={
                <ItemComment
                  isTruncated={false}
                  text="test comment" />
              }
              data-terra-clinical-item-collection-content="comment" />
            <TableCell
              className="content-accessory"
              content={
                <p>
                  End Accessory
                </p>
              } />
          </TableRow>
          <TableRow
            isSelectable={true}
            isSelected={false}>
            <TableCell
              className="content-accessory"
              content={
                <p>
                  Start Accessory
                </p>
              } />
            <TableCell
              content={
                <ItemDisplay
                  isTruncated={false}
                  text="Display 1" />
              }
              data-terra-clinical-item-collection-content="display" />
            <TableCell
              content={
                <ItemDisplay
                  isTruncated={false}
                  text="Display 2" />
              }
              data-terra-clinical-item-collection-content="display" />
            <TableCell
              content={
                <ItemComment
                  isTruncated={false}
                  text="test comment" />
              }
              data-terra-clinical-item-collection-content="comment" />
            <TableCell
              className="content-accessory"
              content={
                <p>
                  End Accessory
                </p>
              } />
          </TableRow>
        </SingleSelectableRows>
      </Table>
    </div>
  } />
`;

exports[`test should render with one row 1`] = `
<ResponsiveElement
  defaultElement={
    <div
      data-terra-clinical-item-collection-list-view={true}>
      <SingleSelectList
        hasChevrons={false}
        isDivided={false}
        onChange={[Function]}>
        <ListItem
          content={
            <ItemView
              accessoryAlignment="alignCenter"
              comment={
                <ItemComment
                  isTruncated={false}
                  text="test comment" />
              }
              displays={
                Array [
                  <ItemDisplay
                    isTruncated={false}
                    text="Display 1" />,
                  <ItemDisplay
                    isTruncated={false}
                    text="Display 2" />,
                ]
              }
              endAccessory={
                <p>
                  End Accessory
                </p>
              }
              isTruncated={false}
              layout="oneColumn"
              startAccessory={
                <p>
                  Start Accessory
                </p>
              }
              textEmphasis="default" />
          }
          isSelected={false} />
      </SingleSelectList>
    </div>
  }
  responsiveTo="parent"
  small={
    <div
      data-terra-clinical-item-collection-table-view={true}>
      <Table
        isPadded={true}
        isStriped={true}
        style={
          Object {
            "tableLayout": "fixed",
          }
        }>
        <TableHeader
          style={
            Object {
              "visibility": "hidden",
            }
          }>
          <TableHeaderCell
            columnType="accessory" />
          <TableHeaderCell
            columnType="display" />
          <TableHeaderCell
            columnType="display" />
          <TableHeaderCell
            columnType="comment" />
          <TableHeaderCell
            columnType="accessory" />
        </TableHeader>
        <SingleSelectableRows
          onChange={[Function]}>
          <TableRow
            isSelectable={true}
            isSelected={false}>
            <TableCell
              className="content-accessory"
              content={
                <p>
                  Start Accessory
                </p>
              } />
            <TableCell
              content={
                <ItemDisplay
                  isTruncated={false}
                  text="Display 1" />
              }
              data-terra-clinical-item-collection-content="display" />
            <TableCell
              content={
                <ItemDisplay
                  isTruncated={false}
                  text="Display 2" />
              }
              data-terra-clinical-item-collection-content="display" />
            <TableCell
              content={
                <ItemComment
                  isTruncated={false}
                  text="test comment" />
              }
              data-terra-clinical-item-collection-content="comment" />
            <TableCell
              className="content-accessory"
              content={
                <p>
                  End Accessory
                </p>
              } />
          </TableRow>
        </SingleSelectableRows>
      </Table>
    </div>
  } />
`;
